# docs/swagger.yaml
@@ -259,6 +259,10 @@ definitions:
         type: string
       projectId:
         type: string
+      projectLeads:
+        items:
+          $ref: '#/definitions/database.User'
+        type: array
       url:
         description: The URL of the project's website
         type: string
@@ -539,6 +543,28 @@ definitions:
     x-enum-varnames:
     - TaskTypeImportFromCommons
     - TaskTypeDistributeEvaluations
+  database.User:
+    properties:
+      id:
+        type: string
+      permission:
+        $ref: '#/definitions/consts.PermissionGroup'
+      project:
+        allOf:
+        - $ref: '#/definitions/database.Project'
+        description: The project this person is leading
+      projectId:
+        description: |-
+          The project this person is leading, because a person can lead only one project
+          This is a many to one relationship
+          it can be null because a person can be a user without leading any project
+          and for most of the users this field will be null
+        type: string
+      registeredAt:
+        type: string
+      username:
+        type: string
+    type: object
   routes.ResponseList-database_Campaign:
     properties:
       data:
@@ -946,6 +972,10 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/database.ProjectRequest'
+      - description: Include project leads
+        in: query
+        name: includeProjectLeads
+        type: boolean
       produces:
       - application/json
       responses:
@@ -959,6 +989,30 @@ paths:
       tags:
       - Project
   /project/{projectId}:
+    get:
+      description: Get a single project
+      parameters:
+      - description: The project ID
+        in: path
+        name: projectId
+        required: true
+        type: string
+      - description: Include project leads
+        in: query
+        name: includeProjectLeads
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/routes.ResponseSingle-database_Project'
+      security:
+      - ApiKeyAuth: []
+      summary: Get a single project
+      tags:
+      - Project
     post:
       description: Update a project
       parameters:
